# workfall-rocket-rs

./: .dockerignore  Cargo.toml  Dockerfile  appspec.yml  workfall-key.pem
.ebextensions/: eb.config
.github/workflows/: main.yml
migrations/001create_role/: down.sql  up.sql
migrations/002create_user/: up.sql
migrations/2022-10-21-114130_create_user/: up.sql
scripts/: application_start.sh  application_stop.sh
src/: lib.rs  main.rs  schema.rs
src/models/: models.rs
src/routes/: index.rs  users.rs
src/services/: index.rs  mod.rs  users.rs
