[package]
name = "workfall-rocket-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
bcrypt = "0.13.0"
openssl = "*"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
